<resources>
    <string name="app_name">FinalProject</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="full_name">Full Name</string>
    <string name="this_is_book">This is Book</string>
    <string name="here_is_full_name">Here is Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember Me</string>
    <string name="categories">Categories</string>
    <string name="this_is_category">this is category</string>
    <string name="see_more">See More</string>
    <string name="show_books">Show Books</string>
    <string name="category_name">Category Name</string>
    <string name="get_book">Get Book</string>
    <string name="student_number">Student Number</string>
    <string name="search_by_title">Search By Title</string>
    <string name="borrowed_books">Borrowed books</string>
    <string name="log_out">Log out</string>
    <string name="My_borrowed_books" />
    <string name="my_borrowed_books">My Borrowed Books</string>
</resources>