<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:src="@drawable/birzeit_university_logo"
        android:layout_marginTop="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txt_register_first_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:hint="@string/first_name"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_register_last_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:hint="@string/last_name"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <EditText
        android:id="@+id/txt_register_username"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:inputType="number"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_register_password"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_register_confirm_password"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2D6C30"
        android:onClick="btn_register"
        android:text="@string/register"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>