<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">



    <ImageView
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:src="@drawable/birzeit_university_logo"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/txtUsernameLogin"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:hint="@string/username"
        android:inputType="number"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPasswordLogin"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#2D6C30"
        android:text="@string/login"
        android:onClick="btn_Login"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>